<resources>
    <string name="app_name">labTest02_IT23231078</string>

    <string name="logo">logo</string>
    <string name="image1">image</string>
    <string name="skip">Skip For Now</string>
    <string name="text">Find Your Perfect Stay</string>
    <string name="tet">Smart Search and Filters</string>
    <string name="te">Start Your Journey</string>

    <string name="start">Get Started</string>
    <string name="login">Login</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="log">Do Not Have An Account?</string>
    <string name="sign">Sign Up</string>
    <string name="next">Next</string>
    <string name="already">Already Have An Account?</string>
    <string name="forgot">Forgot Password</string>



    <string name="mail">E-mail</string>
    <string name="number">Phone Number</string>
    <string name="code">Send Code</string>


    <string name="c_password">Confirm Password</string>

    <string name="payment">Payment Successfully!</string>

    <string name="thank_you">Thank You For Booking</string>
    <string name="add">Add Card</string>
    <string name="make">Add and Make Payment</string>
    <string name="method">Payment Methods</string>
    <string name="confirm">Confirm Payment</string>
    <string name="verakan">Thiruverakan</string>
    <string name="com">thiruverakants@gmal.com</string>
    <string name="house">Houses</string>
    <string name="room">Rooms</string>
    <string name="Register">Register Now</string>

    <string name="save">Save</string>
    <string name="account">account</string>
    <string name="prof">Profile Information</string>
    <string name="edit">Edit Your Information Anytime</string>
    <string name="set">Settings</string>
    <string name="logout">Logout</string>
    <string name="location">Location</string>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>








</resources>